# StereoProcessing_ROS

./: README.md
blackmagic_camera_driver/: CMakeLists.txt  README.md  package.xml
blackmagic_camera_driver/cfg/: left (copy).yaml  ost.yaml  params.yaml  right.yaml
blackmagic_camera_driver/cfg/backup2/: left.yaml  right.yaml
blackmagic_camera_driver/cfg/params20221212/: left.yaml  note  right.yaml
blackmagic_camera_driver/cfg/params20230206/: left.yaml  right.yaml
blackmagic_camera_driver/cfg/recorded/: left.yaml  right.yaml
blackmagic_camera_driver/cfg/stereo_calibration/: left.yaml  right.yaml
blackmagic_camera_driver/include/blackmagic_camera_driver/: barrier.hpp  decklink_interface.hpp
blackmagic_camera_driver/launch/: stereo_microscrope.launch  stereo_microscrope_multithreading.launch
blackmagic_camera_driver/launch/include/: microscope.launch.xml
blackmagic_camera_driver/src/: video_input_node.cpp  video_input_node_multithreading.cpp
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/include/: filtering.hpp  io.hpp  pclmain.hpp  registration_pcl.hpp
my_pcl_tutorial/src/: example.cpp
stereo_camera/: CMakeLists.txt  package.xml  rviz.rviz  rviz3.rviz
stereo_camera/include/: replay_pc_header.hpp  stereo_main.hpp  visualization.hpp
stereo_camera/note/: replay_C++
stereo_camera/scripts/: config.py  io_registraiton.py  node.py  recoding.py  registration_main.py  rigid_registration_o3d.py  segmentation.py  segmentation_main.py
stereo_camera/src/: replay_main.cpp  stereo_main.cpp  visualization.cpp
(+4 files in other folders)
